--- a/login.html
+++ b/login.html
@@ -3,36 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Career on Autopilot - Login</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-        tailwind.config = { theme: { extend: { fontFamily: { sans: ['Inter', 'sans-serif'], }, colors: { 'bg-main': '#F8FAFF', 'accent': '#4A90E2', 'card-bg': '#FFFFFF', 'secondary-bg': '#F1F5F9', 'text-dark': '#1E293B', }, borderRadius: { 'xl': '16px', '2xl': '20px', }, boxShadow: { 'soft': '0 4px 12px rgba(0, 0, 0, 0.05)', } } } }
-    </script>
-    <style>body { background-color: #F8FAFF; color: #1E293B; font-family: 'Inter', sans-serif; }</style>
+    <title>Вход - Career on Autopilot</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 </head>
-<body id="page-login" class="min-h-screen flex items-center justify-center p-6">
-    <div class="bg-card-bg p-8 md:p-10 rounded-2xl shadow-soft w-full max-w-md">
-        <h2 class="text-2xl font-bold text-center text-text-dark mb-8">Вход</h2>
-        <form id="login-form" class="space-y-6">
-            <div>
-                <label for="email_login" class="block text-sm font-medium text-gray-700">Email</label>
-                <div class="mt-1 relative">
-                    <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none"><svg class="h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z" /><path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z" /></svg></div>
-                    <input type="email" id="email_login" class="w-full pl-10 pr-3 py-2 border border-gray-300 rounded-xl focus:ring-accent focus:border-accent" placeholder="employee@company.com или hr@company.com">
-                </div>
+<body id="page-login" class="bg-secondary-bg text-text-dark flex items-center justify-center h-screen">
+    <div class="max-w-md w-full bg-white p-8 rounded-2xl shadow-lg">
+        <h2 class="text-3xl font-bold text-center mb-6">Вход</h2>
+        <form id="login-form">
+            <div class="mb-4">
+                <label for="email" class="block text-sm font-medium text-gray-700 mb-2">Email</label>
+                <input type="email" id="email-input" name="email" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-accent focus:border-accent" required>
             </div>
-            <div>
-                <label for="password_login" class="block text-sm font-medium text-gray-700">Пароль</label>
-                <div class="mt-1 relative">
-                    <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none"><svg class="h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M5 9V7a5 5 0 0110 0v2a2 2 0 012 2v5a2 2 0 01-2 2H5a2 2 0 01-2-2v-5a2 2 0 012-2zm8-2v2H7V7a3 3 0 016 0z" clip-rule="evenodd" /></svg></div>
-                    <input type="password" id="password_login" class="w-full pl-10 pr-3 py-2 border border-gray-300 rounded-xl focus:ring-accent focus:border-accent" placeholder="••••••••">
-                </div>
+            <div class="mb-6">
+                <label for="password" class="block text-sm font-medium text-gray-700 mb-2">Пароль</label>
+                <input type="password" id="password-input" name="password" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-accent focus:border-accent" required>
             </div>
-            <button type="submit" class="w-full py-3 px-4 bg-accent text-white font-bold rounded-xl hover:bg-blue-600 transition-colors">Войти</button>
-            <p class="text-center text-sm text-gray-600">Нет аккаунта? <a href="register.html" class="font-medium text-accent hover:underline">Зарегистрироваться</a></p>
+            <button type="submit" id="login-btn" class="w-full bg-accent text-white font-bold py-3 rounded-lg hover:bg-accent-dark transition-colors">
+                Войти
+            </button>
+            <div id="error-message" class="text-red-500 text-sm text-center mt-4"></div>
         </form>
+        <p class="text-center text-sm text-gray-600 mt-6">
+            Нет аккаунта? <a href="register.html" class="text-accent hover:underline">Зарегистрироваться</a>
+        </p>
     </div>
-    <script src="script.js" defer></script>
+
+    <script src="script.js"></script>
 </body>
 </html>
